--- a/ui-prototype/.eslintrc.json
+++ b/ui-prototype/.eslintrc.json
@@ -9,6 +9,7 @@
                 "extensions": [".js", ".jsx"]
             }
         ],
+        "no-unused-vars": "warn",
         "prettier/prettier": [
             "error",
             {
